<resources>
    <string name="app_name">QuickCoffee</string>
    <string name="registration">Регистрация</string>
    <string name="registration_error">Регистрация не удалась</string>
    <string name="token_is_missing">Токен отсутствует</string>
    <string name="email">e-mail</string>
    <string name="email_hint">example@example.ru</string>
    <string name="password">Пароль</string>
    <string name="password_hint">******</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="login_title">Вход</string>
    <string name="login_to_application">Войти</string>
    <string name="nearest_coffee_shops">Ближайшие кофейни</string>
    <string name="km_to_you">км от вас</string>
    <string name="menu">Меню</string>
    <string name="go_to_payment">Перейти к оплате</string>
    <string name="your_order">Ваш заказ</string>
    <string name="order_information">Время ожидания заказа\n15 минут!\nСпасибо, что выбрали нас!</string>
    <string name="pay">Оплатить</string>
    <string name="no_permission_error">Нет разрешений, необходимых для работы приложения</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="ruble">руб</string>
    <string name="order_is_empty">Заказ пуст</string>
    <string name="map">Карта</string>
    <string name="on_map">На карте</string>
</resources>