<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <FrameLayout
        android:id="@+id/registration_fragment_title_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registration_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_gravity="center"
            android:text="@string/registration"
            android:fontFamily="@font/sf_ui_display_bold"
            android:textColor="@color/brown_text"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginBottom="1dp"
        android:background="@color/grey_line"
        app:layout_constraintBottom_toBottomOf="@id/registration_fragment_title_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_title"
        android:layout_marginHorizontal="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_fragment_title_frame"
        android:fontFamily="@font/sf_ui_display_medium"
        android:textColor="@color/brown_text"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/BookingInputLayoutOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        android:hint="@string/email"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/brown_light_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/brown_light_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="18dp"
        android:text="@string/password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        android:fontFamily="@font/sf_ui_display_medium"
        android:textColor="@color/brown_text"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/BookingInputLayoutOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/brown_light_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/repeat_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/repeat_password"
        android:fontFamily="@font/sf_ui_display_medium"
        android:textColor="@color/brown_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_layout"
        style="@style/BookingInputLayoutOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/repeat_password"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/brown_light_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_button"
        style="@style/ButtonBrownBorderlessHeight48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30.51dp"
        android:background="@drawable/button_rounded_24"
        android:padding="13dp"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/registration"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>